2005-06-21  John ffitch  <jpff@codemist.co.uk>

	* Opcodes/biquad.c (biquada, biquad, biquadset): 
	* OOps/ugens5.c (porset, port, tonset, tone, tonsetx, tonex,
	atone, atonex, rsnset, reson, rsnsetx, resonx, areson): Work in
	doubles internally

2005-06-20  John ffitch  <jpff@codemist.co.uk>

	* InOut/OSCrecv.c (OSC_listdeinit): Fixed a typo

2005-06-15  John ff  <jpff@codemist.co.uk>

	* InOut/OSCrecv.c: New file for OSC listening

2005-06-15  John ffitch  <jpff@codemist.co.uk>

	* SConstruct: Fixed TAGS so it looks at C files as well

2005-06-13    Victor Lazzarini <victor.lazzarini@nuim.ie>
	* Top/dl_opcodes.c: commented out old code that was causing conflict
	                    on OSX 10.4

2005-06-09     Victor Lazzarini <victor.lazzarini@nuim.ie>
	* InOut/rtcoreaudio.c : further improvements to coreaudio RT IO

2005-06-03	Istvan Varga	<istvan@csounds.com>
	* Engine/oload.c:
	* H/csoundCore.h:
	  added (some) PVOC related functions to API
	* OOps/pvfileio.c:
	  extensively revised code (needs testing): use ANSI C functions
	  for file I/O, removed dependencies on sizeof(long)==4 and endianness,
	  removed limit on number of files
	* util/pvanal.c:
	  allow the use of PVOC-EX format again (still no displays though)

2005-06-03 Victor Lazzarini <Victor.Lazzarini@nuim.ie>
	* OOps/pvfileio.c: removed statics and added csound* to functions;
	 changed all relevant function calls elsewhere in the code to
	 match the new prototypes

2005-06-01 Victor Lazzarini <Victor.Lazzarini@nuim.ie>
	* Opcodes/pvsbasic.c pvsbasic.h added opcode pvsinit for fsig
	initialisation

2005-05-31	Istvan Varga	<istvan@csounds.com>
	* Engine/otran.c:
	  allow global f-signals
	  code changes for faster name lookup in global/local pools
	* Engine/rdorch.c:
	  store line numbers in variables of type 'int' rather than 'short'
	  TODO: clean up file reading (correct handling of EOL characters,
	        use csoundFileOpen(), do not depend on being able to call
		ungetc() multiple times)